--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.12.7",
+    "resend": "^6.4.2",
     "sonner": "^1.7.4",
     "stripe": "^17.3.1",
     "swr": "^2.3.6",
