--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ scripts/*-production.ts
 scripts/*-prod.ts
 scripts/test-*.js
 scripts/test-*.ts
+# Claude Code local settings
+.claude/settings.local.json
